# simple_rag

./: README.md  pyproject.toml
simple_rag/: main.py
